--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyD4hC2dSxbuFkLy3bux0-zw3XzMEqTO91Y",
+      authDomain: "redsocial-npng.firebaseapp.com",
+      databaseURL: "https://redsocial-npng.firebaseio.com",
+      projectId: "redsocial-npng",
+      storageBucket: "redsocial-npng.appspot.com",
+      messagingSenderId: "731862420435"
+    };
+    firebase.initializeApp(config);
+  </script>
+
 </head>
 <body>
+  <input id="email" type="email" placeholder="Ingresar Correo">
+  <input id="password" type="password" placeholder="Ingresar Contraseña">
+  <button id="sign-up">Enviar</button>
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
