Se añadió la función de inicio de sesión y un archivo Json que contiene un SDK

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,13 @@
   <input id="password" type="password" placeholder="Ingresar Contraseña">
   <button id="sign-up">Enviar</button>
 
+  <div class="sign-in-box">
+    <form>
+      <input id="email-si" type="email" placeholder="Ingresar Correo">
+      <input id="password-si" type="password" placeholder="Ingresar Contraseña">
+      <button id="sign-in">Enviar</button>
+    </form>
+  </div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
