--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
-
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
   <script>
     // Initialize Firebase
@@ -21,6 +22,7 @@
   </script>
 
 </head>
+
 <body>
   
   <div id="sign-in-box" class="container-login">
@@ -28,6 +30,9 @@
       <input id="email-si" type="email" placeholder="Ingresar Correo">
       <input id="password-si" type="password" placeholder="Ingresar Contraseña">
       <button id="sign-in">Enviar</button>
+      <button id="facebook-login" class="fa fa-facebook"></button>
+      <button id="google-login" class="fa fa-google"></button>
+
     </form>
   </div>
 
