--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,27 @@
     </div>
   </section>
 
+<header>
+  <nav>
+    <label>logotypo</label>
+    <td><img class = "sing-" src="" alt="cerrar">
+      <a href="#">Cerrar Sesión</a>
+      </td>
+  
+  </nav> 
+</header>
+
+<footer>
+  <nav>
+    <a href="#home"><img class = "icon" src="" alt="home"></a>
+    <a href="#home"><img class = "icon" src="" alt="buscador"></a>
+    <a href="#home"><img class = "icon" src="" alt="postear"></a>
+    <a href="#home"><img class = "icon" src="" alt="perfil"></a>    
+  </nav>
+</footer>
+
+
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
