Se cambió de sitio un contenedor en el html, se quitó un botón para cerrar sesión y su función fue añadida a otro ícono

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,13 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <label>logotypo</label>
+      <a href="#home"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
+    </nav> 
+  </header>
+
   <section class="log-container"> 
     <div class="signin-container">
       <img src="" alt="logo">
@@ -54,22 +61,18 @@
       </form>     
 
     </div>
+
+    <div id="log-out-box" >
+
+        <h1>Bienvenido</h1>
+        <p id="user-para">Ejemplo de inicio de sesión</p>
+    
+    </div>
   </section>
 
-  <div id="log-out-box" >
 
-    <h1>Bienvenido</h1>
-    <p id="user-para">Ejemplo de inicio de sesión</p>
-    <button id="log-out" class="log-out-btn">Cerrar Sesión</button>
 
-  </div>
-  <header>
-    <nav>
-      <label>logotypo</label>
-      <a href="#home"><img src="iconos/exit-1.png" class ="icon-header" alt=""></a>
-    </nav> 
-  </header>
-  <footer>
+  <footer id="footer-container">
     <nav>
       <div class="footer">
       <a href="#home"><img src="iconos/house.png" class ="icon" alt=""></a>
