probando guardar la data dinámicamente

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,11 @@
 
 </head>
 <body>
-  <input id="email" type="email" placeholder="Ingresar Correo">
-  <input id="password" type="password" placeholder="Ingresar Contraseña">
-  <button id="sign-up">Enviar</button>
-
+  <form>
+    <input id="email-register" type="email" placeholder="Ingresar Correo">
+    <input id="password-register" type="password" placeholder="Ingresar Contraseña">
+    <button id="sign-up">Enviar</button>
+  </form>
   <div class="sign-in-box">
     <form>
       <input id="email-si" type="email" placeholder="Ingresar Correo">
