Se movió de sitio la carpeta imágenes dentro de src y se corrigió el enrutamiento por el cambio de sitio, se cambió colores de la interfaz y se cambió el nombre de id de una caja contenedora del registro

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 <body>
   <header>
     <nav>
-      <label>logotypo</label>
+      <label>logo</label>
       <a href="#home"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
     </nav> 
   </header>
@@ -49,6 +49,10 @@
 
         </form>      
       </div>
+    </div>
+
+    <div>
+      <h4 id="signup-question" class="signup-question">¿No tienes una cuenta?</h4>
     </div>
 
     <div class="signup-container" id="sign-up-box">       
@@ -75,10 +79,10 @@
   <footer id="footer-container">
     <nav>
       <div class="footer">
-      <a href="#home"><img src="iconos/house.png" class ="icon" alt=""></a>
-      <a href="#home"><img src="iconos/search.png" class ="icon" alt=""></a>
-      <a href="#home"><img src="iconos/add-3.png" class ="icon" alt=""></a>
-      <a href="#home"><img src="iconos/user-1.png" class ="icon" alt=""></a>
+      <a href="#home"><img src="iconos/house.png" class ="icon-footer" alt=""></a>
+      <a href="#home"><img src="iconos/search.png" class ="icon-footer" alt=""></a>
+      <a href="#home"><img src="iconos/add-3.png" class ="icon-footer" alt=""></a>
+      <a href="#home"><img src="iconos/user-1.png" class ="icon-footer" alt=""></a>
     </div>
     </nav>
   </footer>
