añadiendo boton de regresar a página inicial y modificaciones responsive

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
          </nav>
       </header>
       <section class="log-container">
-         <div class="signin-container">
+         <div class="signin-container" id = "sign-in-box">
             <img src="" alt="logo">
             <p>logotipo</p>
             <div id="sign-in-box" class="container-login">
@@ -60,14 +60,15 @@
             <h1>Bienvenido</h1>
             <p id="user-para">Ejemplo de inicio de sesión</p>
          </div>
+         <button type="button" id = "go-back" class ="go-back-btn">Regresar</button>
       </section>
-      <section id="post-container">
+      <!--<section id="post-container">
           <br>
           <textarea name="post" id="post-area" cols="40" rows="5" placeholder="Postea alguna recomendación aquí :D"></textarea>
           <br>
           <button type="button" class="edit"><img src="./iconos/edit.png" alt="edit" class="edit-icon"> Editar</button>
           <button type="button" class="delete"><img src="./iconos/error.png" alt="edit" class="error-icon"> Eliminar</button>
-          
+          -->
       </section>
       <footer id="footer-container">
          <nav>
