--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" href="./imagenes/Logo.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
@@ -27,15 +28,15 @@
 <body>
   <header>
     <nav>
-      <label>logo</label>
+      <img src="./imagenes/Logo2.png" alt="logowhite" class="logo-img">
       <a href="#home"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
     </nav> 
   </header>
 
   <section class="log-container"> 
     <div class="signin-container">
-      <img src="" alt="logo">
-      <p>logotipo</p>
+      <img src="./imagenes/Nombre.png" alt="logo" class="logoname-img">
+      <p class="logotipo">"Bla bla bla bla bla bla bla"</p>
 
       <div id="sign-in-box" class="container-login">         
         <form>
