Se solucionó problemas con la visualización del html, se agregó un nuevo archivo con templates

--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,14 @@
       <header>
          <nav>
             <img src="./imagenes/Logo2.png" alt="logowhite" class="logo-img">
-            <a href="#home"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
+            <a href="#signin"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
          </nav>
       </header>
+      <!--<section id="container"></section>-->
+
       <section class="log-container">
         <img src="./imagenes/Nombre.png" alt="logo" class="logoname-img">
         <div class="signin-container">
-          <img src="" alt="NombreDeRedSocial">
           <p class="logotipo">"Bla bla bla bla bla bla bla"</p>
           <div id="sign-in-box" class="container-login">
             <form>
