--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
                   <h2>Ingresa directamente con:</h2>
                   <button id="facebook-login" class="fa fa-facebook"></button>
                   <button id="google-login" class="fa fa-google"></button>
+                  <button id="twitter-login" class="fa fa-twitter"></button>
                </form>
             </div>
          </div>
