implementación de firestore en post - en proceso

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,16 @@
           <p id="user-para">Ejemplo de inicio de sesión</p>
         </div>
       </section>
-
+      <section class = 'post-area'>
+          <form class="form-inline">
+            <textarea id="user-content-post" class="form-control form-textarea" placeholder="Escribe una publicación"></textarea>
+            <div class="ml-auto">
+              <button class="btn btn-warning mt-2" id="send-post" title="Publicar">
+                <i class="fas fa-location-arrow"></i>
+              </button>
+            </div>
+          </form>
+      </section>
       <footer id="footer-container">
         <nav>
           <div class="footer">
