cambios de id para iniciar la separación en templates

--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,8 @@
       <title>Document</title>
       <script src="https://apis.google.com/js/platform.js" async defer></script>
       <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-      <script>
-         // Initialize Firebase
-         var config = {
-           apiKey: "AIzaSyD4hC2dSxbuFkLy3bux0-zw3XzMEqTO91Y",
-           authDomain: "redsocial-npng.firebaseapp.com",
-           databaseURL: "https://redsocial-npng.firebaseio.com",
-           projectId: "redsocial-npng",
-           storageBucket: "redsocial-npng.appspot.com",
-           messagingSenderId: "731862420435"
-         };
-         firebase.initializeApp(config);
-      </script>
    </head>
+   
    <body>
       <header>
          <nav>
@@ -30,7 +19,8 @@
             <a href="#signin"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
          </nav>
       </header>
-      <!--<section id="container"></section>-->
+
+      <section id="container"></section>
 
       <section class="log-container">
         <img src="./imagenes/Nombre.png" alt="logo" class="logoname-img">
