--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       <title>Document</title>
       <script src="https://apis.google.com/js/platform.js" async defer></script>
       <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-firestore.js"></script>
       <script>
          const config = {
             apiKey: "AIzaSyD4hC2dSxbuFkLy3bux0-zw3XzMEqTO91Y",
@@ -24,25 +25,7 @@
    </head>
    
    <body>
-      <!--<header>
-         <nav>
-            <img src="./imagenes/Logo2.png" alt="logowhite" class="logo-img">
-            <a href="#signin"><img src="iconos/exit-1.png" id="log-out" class ="icon-header" alt=""></a>
-         </nav>
-      </header>-->
-      
       <section id="log-container" class="log-container"></section>
-
-      <!--<footer id="footer-container">
-        <nav>
-          <div class="footer">
-            <a href="#home"><img src="iconos/house.png" class ="icon-footer" alt=""></a>
-            <a href="#home"><img src="iconos/search.png" class ="icon-footer" alt=""></a>
-            <a href="#home"><img src="iconos/add-3.png" class ="icon-footer" alt=""></a>
-            <a href="#home"><img src="iconos/user-1.png" class ="icon-footer" alt=""></a>
-          </div>
-        </nav>
-      </footer>-->
       <script type="module" src="main.js"></script>
    </body>
 </html>
