subiendo cambios en funcion editaar y eliminar

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,27 @@
 
    </head>
    <body>
+         <header id="header-container">
+               <nav>
+                  <img src="./logo/Logo2.png" alt="logowhite" class="logo-img">
+                  <a href="#/signIn"><img src="aicon/exit-1.png" id="sign-out" class ="icon-header" alt=""></a>
+               </nav>
+            </header>
+
      <div id="log-container" class="log-container"></div>
      
+     <footer id="footer-container">
+         <nav>
+           <div class="footer">
+             <a href="#/"><img src="aicon/home.png" class ="icon-footer" alt=""></a>
+             <a href="#"><img src="aicon/search.png" class ="icon-footer" alt=""></a>
+             <a href="#"><img src="aicon/add-3.png" class ="icon-footer" alt=""></a>
+             <a href="#/perfil"><img src="aicon/users-1.png" class ="icon-footer" alt=""></a>
+           </div>
+         </nav>
+       </footer>
      <script type="module" src="main.js"></script>
+
    </body>
 </html>
 
