funcion de guardar post en firestore, funciones adicionales de post en proceso

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
    <body>
       <section id="log-container" class="log-container"></section>
       <script type="module" src="main.js"></script>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
    </body>
 </html>
 
