--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
    </head>
    <body>
 
-     <div id="log-container" class="log-container"></div>
+     <section id="log-container" class="log-container"></section>
+     <section id="post-container"></section>
      
      <script type="module" src="main.js"></script>
 
