--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
    <body>
 
      <section id="log-container" class="log-container"></section>
-     <section id="post-container"></section>
+     <section id="post-container" class="log-container"></section>
      
      <script type="module" src="main.js"></script>
 
