--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
    </head>
    <body>
          <section id="log-container" class="log-container"></section>
-         <section id="post-container" class="log-container"></section>
+         <section id="post-container-box" class="log-container"></section>
 
  
      <script type="module" src="main.js"></script>
