--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link rel="icon" type="image/png" href="./imagenes/Logo.png">
+      <link rel="icon" type="image/png" href="../imagen/logo/Logo.png">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <title>Document</title>
+      <title>Agogo</title>
       <script src="https://apis.google.com/js/platform.js" async defer></script>
       <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase-app.js"></script>
@@ -23,4 +23,3 @@
    
    </body>
 </html>
-
